--- a/ReQuantum/Resources/I18n/UIText.resx
+++ b/ReQuantum/Resources/I18n/UIText.resx
@@ -335,4 +335,7 @@
   <data name="YearMonthFormat" xml:space="preserve">
     <value>{0}/{1}</value>
   </data>
+  <data name="SyncCoursesZju" xml:space="preserve">
+    <value>Sync ZJU</value>
+  </data>
 </root>
