--- a/ReQuantum/Resources/I18n/UIText.zh-CN.resx
+++ b/ReQuantum/Resources/I18n/UIText.zh-CN.resx
@@ -335,4 +335,7 @@
   <data name="YearMonthFormat" xml:space="preserve">
     <value>{0}年{1}月</value>
   </data>
+  <data name="SyncCoursesZju" xml:space="preserve">
+    <value>同步学在浙大</value>
+  </data>
 </root>
